updated footer and contact me page

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html">Home</a>
                     </li>
@@ -85,6 +85,11 @@
                         <a class="nav-link" href="./referances.html">Referances</a>
                     </li>
                 </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#home">Go Top</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -92,7 +97,8 @@
 
     <!-- Contact Me Start -->
     <section class="container-md card my-5 p-3 shadow">
-        <h2 id="contact" class="text-center p-3 mb-3 fw-bold">Contact Me</h2>
+        <h2 id="contact" class="text-center p-3 fw-bold">Contact Me</h2>
+        <p class="p-4 card shadow m-4">You can reach my GitHub page by using the icons. To contact me, you can use the WhatsApp or Instagram icons. To send a direct message, please fill out the form below. Your feedback and comments will contribute to my growth on this journey. Thank you in advance!</p>
         <div class="d-flex gap-3 justify-content-center mb-5">
             <a class="icon-link-hover text-dark" style="--bs-icon-link-transform: translate3d(0, -.325rem, 0);"
                 aria-label="Chat on WhatsApp" href="https://wa.me/905433010531" target="_blank">
@@ -138,11 +144,9 @@
     <!-- Footer Start -->
     <div class="container-fluid text-center text-white mt-0">
         <footer class="">
-            <p>Built using <a
-                    class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-                    href="https://getbootstrap.com/" target="_blank">Bootstrap</a> knowledge. Please feel free to
-                reach out to me on my profile page for
-                assistance and advice.</p>
+            <p>Built using basic <a
+                class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                href="https://getbootstrap.com/" target="_blank">Bootstrap</a> knowledge.</p>
         </footer>
     </div>
     <!-- Footer End -->
