--- a/index.html
+++ b/index.html
@@ -272,11 +272,9 @@
     <!-- Footer Start -->
     <div class="container-fluid text-center text-white mt-0">
         <footer class="">
-            <p>Built using <a
+            <p>Built using basic <a
                     class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-                    href="https://getbootstrap.com/" target="_blank">Bootstrap</a> knowledge. Please feel free to
-                reach out to me on my profile page for
-                assistance and advice.</p>
+                    href="https://getbootstrap.com/" target="_blank">Bootstrap</a> knowledge.</p>
         </footer>
     </div>
     <!-- Footer End -->
