--- a/referances.html
+++ b/referances.html
@@ -74,7 +74,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html">Home</a>
                     </li>
@@ -83,6 +83,11 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="./referances.html">Referances</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#home">Go Top</a>
                     </li>
                 </ul>
             </div>
@@ -94,11 +99,9 @@
     <!-- Footer Start -->
     <div class="container-fluid text-center text-white mt-0">
         <footer class="">
-            <p>Built using <a
-                    class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-                    href="https://getbootstrap.com/" target="_blank">Bootstrap</a> knowledge. Please feel free to
-                reach out to me on my profile page for
-                assistance and advice.</p>
+            <p>Built using basic <a
+                class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                href="https://getbootstrap.com/" target="_blank">Bootstrap</a> knowledge.</p>
         </footer>
     </div>
     <!-- Footer End -->
