saperation of pages finished, updated contents

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                         <a class="nav-link active" href="#contact">Contact Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./referances.html">Referances</a>
+                        <a class="nav-link" href="./learning-exercises.html">Learning Exercises</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
