--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <a class="nav-link" href="./contact.html">Contact Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./referances.html">Referances</a>
+                        <a class="nav-link" href="./learning-exercises.html">Learning Exercises</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
@@ -110,22 +110,7 @@
             <h2 id="title" class="text-center p-3 fw-bold">About Me</h2>
             <div class="row p-4">
                 <div class="col-md-9">
-                    <p class="fs-5 fw-meduim">Hi there! I'm <a
-                            class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-reset fw-semibold"
-                            href="https://github.com/kasimpasaoglu" target="_blank">Kasim
-                            Pasaoglu</a> hailing from Turkey. Recently, I've delved into the exciting world of front-end
-                        development, and I couldn't be more thrilled about it. Since May 1, 2024, I've been immersing
-                        myself
-                        in courses on Udemy, with the invaluable guidance of <a
-                            class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-reset fw-semibold"
-                            href="https://github.com/hakanyalcinkaya" target="_blank">Hakan Yalcinkaya</a>. I also
-                        receive
-                        tremendous support from my friend <a
-                            class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-reset fw-semibold"
-                            href="https://github.com/umitalp">Umit Alp
-                            Acarlar</a>, a Senior Software Engineer.<br>It's an
-                        exhilarating journey, and I'm currently working on my very first project to showcase on GitHub
-                        Pages. Stay tuned for updates on my coding endeavors!</p>
+                    <p class="fs-5 fw-meduim">Hey there! 🌟 I'm <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-reset fw-semibold" href="https://github.com/kasimpasaoglu" target="_blank">Kasim Pasaoglu</a> coming at you all the way from Turkey! Lately, I've been diving headfirst into the amazing world of front-end development, and let me tell you, it's been quite the ride! 🚀 Since May 1, 2024, I've been soaking up knowledge like a sponge through courses on Udemy, all thanks to the incredible guidance of <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-reset fw-semibold" href="https://github.com/hakanyalcinkaya" target="_blank">Hakan Yalcinkaya</a>. 🎓 And you know what? I've got a fantastic buddy, <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-reset fw-semibold" href="https://github.com/umitalp"> Umit Alp Acarlar </a>, who's a Senior Software Engineer, always there to cheer me on! 🙌 <br><br> Let me tell you, it's been one heck of a journey, and I'm loving every minute of it! 💖 Right now, I'm super stoked to be working on my course. 🌐 So, stay tuned for all the exciting updates on my coding adventures! 🚀</p>
                 </div>
                 <div id="profile" class="col-md-3 text-right">
                     <picture>
