--- a/learning-exercises.html
+++ b/learning-exercises.html
@@ -127,7 +127,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Cloning PicoCSS</h5>
                             <p class="card-text">In this project, I delved into CSS fundamentals by replicating the PicoCSS structure with my own CSS code. By meticulously examining the PicoCSS documentation, I aimed to create my own CSS structure as closely as possible. This provided a valuable exercise in understanding CSS principles and techniques.</p>
-                            <a href="https://pico-clone-kasim.netlify.app/" class="btn btn-primary">Go to Page</a>
+                            <a href="https://pico-clone-kasim.netlify.app/" target="_blank" class="btn btn-primary">Go to Page</a>
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CSS Exercise</h5>
                             <p class="card-text">I crafted a website from scratch using HTML and CSS, experimenting with various colors and layouts. Due to limited exposure to concepts like flex and media queries, the design is tailored primarily for desktop screens.</p>
-                            <a href="https://css-training-kasim.netlify.app/" class="btn btn-primary">Go to Page</a>
+                            <a href="https://css-training-kasim.netlify.app/" target="_blank" class="btn btn-primary">Go to Page</a>
                         </div>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                         <div class="card-body">
                             <h5 class="card-title">SCSS Exercise</h5>
                             <p class="card-text">I tackled a challenge I found on Frontend Mentor, striving to replicate the structures as faithfully as possible using SCSS. Additionally, I made the page mobile-responsive with flexbox and media queries.</p>
-                            <a href="https://scsstraining.netlify.app/" class="btn btn-primary">Go to Page</a>
+                            <a href="https://scsstraining.netlify.app/" target="_blank" class="btn btn-primary">Go to Page</a>
                         </div>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Bootstrap Exercise</h5>
                             <p class="card-text">By grasping the fundamentals and logic of Bootstrap, I created a page. Without establishing a custom CSS structure, I customized various usage examples by copying basic Bootstrap knowledge, tailoring them to my needs.</p>
-                            <a href="https://bootstraptraining-kasim.netlify.app/" class="btn btn-primary">Go ro Page</a>
+                            <a href="https://bootstraptraining-kasim.netlify.app/" target="_blank" class="btn btn-primary">Go ro Page</a>
                         </div>
                     </div>
                 </div>
