js-SPA exercise added

--- a/learning-exercises.html
+++ b/learning-exercises.html
@@ -157,7 +157,17 @@
                         <div class="card-body">
                             <h5 class="card-title">Bootstrap Exercise</h5>
                             <p class="card-text">By grasping the fundamentals and logic of Bootstrap, I created a page. Without establishing a custom CSS structure, I customized various usage examples by copying basic Bootstrap knowledge, tailoring them to my needs.</p>
-                            <a href="https://bootstraptraining-kasim.netlify.app/" target="_blank" class="btn btn-primary">Go ro Page</a>
+                            <a href="https://bootstraptraining-kasim.netlify.app/" target="_blank" class="btn btn-primary">Go to Page</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 my-3">
+                    <div class="card h-100 shadow">
+                        <img src="./img/JsSpaExercise.png" class="card-img-top" alt="jsSPA page">
+                        <div class="card-body">
+                            <h5 class="card-title">JavaScript SPA Exercise</h5>
+                            <p class="card-text">This project is a single page application (SPA) using hash routing to load content dynamically with JavaScript and Fetch API. The navigation bar is styled with Bootstrap to highlight the active page. This project improved my JavaScript skills and understanding of modern web development techniques.</p>
+                            <a href="https://jsspapractise.netlify.app/" target="_blank" class="btn btn-primary">Go to Page</a>
                         </div>
                     </div>
                 </div>
