--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
         </div>
         <div id="profile" class="col-md-3">
             <picture>
-                <source media="(max-width: 767px)" srcSet="src/images/profile-mobile.jpg" />
+                <source media="(max-width: 767px)" srcSet="src/images/profile.jpeg" />
                 <img class="img-thumbnail shadow" src="src/images/profile.jpeg" alt="profile" />
             </picture>
         </div>
@@ -35,5 +35,5 @@
             </div>
         </div>
     </div>
-    <img id="roadmapImg" src="src/images/roadmap.png" alt="roadmap" class="img-thumbnail my-3 p-4 shadow"/>
+    <img id="roadmapImg" src="src/images/roadmap.png" alt="roadmap" class="img-thumbnail my-3 p-4 shadow" />
 </article>
